@@ -1,24 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST os-prober_1.53.tar.gz 26132 RMD160 1585c3cd7f628f390823090a58f519b2cb45e76d SHA1 4bbc6b755d0fd98f407bf56488d27965554c181d SHA256 58c47274b8e531fdc8b525fa5903885b92dbc3ee39bf13dd87e40336703a58c2
-EBUILD os-prober-1.53.ebuild 1597 RMD160 7fbafcf347606aa18e8282e84cc3494bc0e63ad4 SHA1 efb6334b38ec16a8d5a744311bd9e3cddeeb8ee4 SHA256 fff1fa3bec8a22e105f34fe5a012c840666952b96706bb722796089ff4dcf11c
-MISC ChangeLog 2491 RMD160 8eaadc77dd8e2d57dc84fb0be62dbc13652dd8e5 SHA1 82b4d4dc6bbc6410f1facde12213c016d3c5b7c6 SHA256 2539b3be98b82e8f7cfeba57d7fb9e631846f4bad34b3690868918cd3a71fcba
-MISC metadata.xml 380 RMD160 ca0d693cf50aa526386717e05999f324c08e9cc8 SHA1 275a99301d2485e52b7a114173769df83dc98d03 SHA256 8db36a7e177cb454e95e06486d462d02609a3ccac4a5661c0d29399278596ef9
+DIST os-prober_1.53.tar.gz 26132 SHA256 58c47274b8e531fdc8b525fa5903885b92dbc3ee39bf13dd87e40336703a58c2 SHA512 4e983d6774cb85df9bec1e8e7ca53d9eec6605bf7308b141d1ee1f118b11534e440a19c0aae17c38f717f433c1ef853ad5879feac1ba4ee10774b3f85bb544ad WHIRLPOOL b555c053fd0d2b934c3e894971744f0a11298695730d8f5b4b344ad175938c8f4e877da20031d6c89ae6a286894f52d18b64b6a8f63136814019b73754298def
+DIST os-prober_1.56.tar.gz 25738 SHA256 88a79a04617f4ecbeb9c4d318cd9cf8fcb4ae7a724bd503942354011c7da5719 SHA512 8bdb158e546b51658ef170171a623693aac0939e10e9ddf0df834d751dd1c97a902a0b43f0eca1ce53069ac42e0f42f8b824e216f04b036cb3100698d625ab7a WHIRLPOOL d8bea4a31473ff31ada1592fd1423fbb0423a105f087887f06b43ade0736ceb1a5e36f89fe73323b216d5b321fc7002c21a83d9c024de5d214206072b066ccb3
+EBUILD os-prober-1.53.ebuild 1597 SHA256 fff1fa3bec8a22e105f34fe5a012c840666952b96706bb722796089ff4dcf11c SHA512 3b1de8254af24cbb030b57002e628a75ae332003b519e74e7d26afba81103e0df276aff6d0f6f695984363f92565144fb762f9732b348229effc65a30f8074fc WHIRLPOOL 40ab451b6493e6df9d437fc3090d55e04b366299567e09d095d9215f8b56d423ecf44d57e373082ffaa246549ae04c775529f8a886adf0172dc373fcecfa593d
+EBUILD os-prober-1.56.ebuild 1594 SHA256 e8b104447032aa637f3812fe1ed9c4c9577c9462da75f91628d59db29f681f29 SHA512 6c780e4d5439628438f2f6b5d5dcf1b93c8621fe293409ec45260391537f6d57d1c295b76ae9fc1b111669fef983ba3caeca7f50fff62a0969128e9fa7078416 WHIRLPOOL 6e0933d3c72c789bcac9ad24b51495ed57c87b5c88928479b55c1ce5535483e1ea5540512fb2789f32f7996079ee04d7be7944dcc88749bad8e33ff652849afc
+MISC ChangeLog 2659 SHA256 78c42c18f070d50505dfded120eccab25fe8c76b1b02e8bf3a063ee706c53969 SHA512 e5dfdf3fe1e79ad92fde8197a3f1c4e5c5baa40003d5775a76d9ebdca44f70f286d0862643a7f0936e665fcf8537e98d0365e7c4902d8adb814e87fcafde3658 WHIRLPOOL d6a78a6a0b6a3f91bc610e8d28f209b31f4b521586be63c21bb6d10c8cb59fd39771013713ff1d6de5962c70a626809831b5c405a6fe3bbd0f07999f5fcad818
+MISC metadata.xml 380 SHA256 8db36a7e177cb454e95e06486d462d02609a3ccac4a5661c0d29399278596ef9 SHA512 224295e83f241b95ec7f70aa442b89780106b8c08049287965bf6b3ac356777f36a1e45cbf86b3ea880adc6b2d8907ac7fa792cd43f950334c57294c7849f53e WHIRLPOOL 7834ef16628e7760a2bebe893dcb03aa73d9b6c8711a1f1f4ae0604256296617247a6a1f1f7521cfd5de95fcb759d7ce42d75cf70d88d41c2e42482373abeb9d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP7dcXAAoJEOSiRoyO7jvorPsQAI1ppyFtx10IQGcw8nWxpmQp
-VsReqKZuFHCMl1oVWWFbNh43Rh3yDU7v16yKEGze7FWcsgfiI8VY48r0fpBL8iBW
-pjo+E610vjaJTQZ+uGZdX+blvTGnrAJ4XpC2tYo5YCoFJ9RUGIwgCQFaykHv5ejO
-4Ds5VarEF6Cu0ZBR+4SBW6AFbV+inEsJzpSpkbwTZk7axe27pYFLHJeEgpYLBteT
-A5JRrZknXUcp5nU/ad13gByVoaj+V0iX9Ei0KTv9HggvKpDANAQ38ihLg+ZUypNw
-d9cwxcwlTs5R3vmRytmA4XTha/NRVTUMGwXSHtzCn5uQjpkysKTvtMJR3MEg2Lmg
-FUyueW2s/OXhaLYblYmKxpkthaCxdURZOOwLgrWCkOT6iuypF9LByPafPb6XKPTt
-7VSawiNUn3r8K3bLe+aS697xMD7k9bUbs10suv/efrTnGxs4RYLwlD8hUCIn+7Xg
-oOrVsBtLG2t1vnT6FXimyz2p/hx24uo6l55xDJ8DP1HKBjHryEQfY01372TPPQiT
-gjoxhCEaq8GRLZMU9xP6R7EFTrOyjT8ObQ6sogq3XI7TBv2Z9xqYkIUNa089THsG
-ovzP6HBMNAfd3ZQAzfB16PWJhbxeM3prki8NRiwujVFegEYY0sFlSdEER06DhPjI
-80P/nt5VzUfSLvj48Kv+
-=lAKV
+iQIcBAEBCAAGBQJQew4sAAoJELHSF2kinlg4aMkP/3WbRBoXiq7znLoQ9JqeoDDC
+G2e7MTqtTLEKGLPr6rOUlenRVpc0NMtGquYsB5xZeVXmlu8BFHZsQEIGKjgEVagv
+LDmbe14o/9+WHJsXHsfWZUiLy4zstjcKoFtDtphFZ9yV4UwruDnV9ZFy4aKf3L+Z
+eGp32aqvGL4uGLwFdl9Wnm250cXppOd/UClYtehhhKEaDKsVrtVDm5Z+JXis6KhA
+JPve+ZNgI6VkOZGwNeb9KlphooDlDLIkX4IuhXtndrWqCuu1WQiNdRysz/n2qTg4
+mzeirQ+uHYiZkCi8q0BCrAye+bCWFoNqZuNymEeat/3SlgoUwMl0v4vd5G1WRwH+
+VntPCeQvztX9T8QfDL1RsljeasFMcfFN9JyVWWGuaEeIM9i8IB4yWCFUA4F6m5bS
+W/QXyKyxlP/K68jewqL8ohLfVNLIPhwDpOwC9189bv8UAfxujGbE+ZL96UQ5KmDP
+IGDWVpQtvEK9bb1O8k0sGl9oZOXe3B2e56a2FNkzDPotL529Xg9f4AWOqFJXQMBq
+CywCA1H7lrQ/uxemItS3kZ2hRFhqSBLqRYuGZhCKqDGLg58CRGlFDiFoNno10mFi
+euGaCIr1K/7PhjKHRos8jxWk5GpGEMOjnOXNxVisO2bTobNnI6xHgKgqUwEAX9om
+8L8MnfUJvfFaS7nMLa1l
+=GAKb
 -----END PGP SIGNATURE-----
