@@ -1,6 +1,11 @@
 # ChangeLog for sys-boot/os-prober
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/os-prober/ChangeLog,v 1.14 2012/06/29 16:25:49 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/os-prober/ChangeLog,v 1.15 2012/10/14 19:10:30 abcd Exp $
+
+*os-prober-1.56 (14 Oct 2012)
+
+  14 Oct 2012; Jonathan Callen <abcd@gentoo.org> +os-prober-1.56.ebuild:
+  Update to latest upstream, use upstream's installation directories
 
 *os-prober-1.53 (29 Jun 2012)
 
@@ -69,4 +74,3 @@
   15 Dec 2009; Jonathan Callen <abcd@gentoo.org> +os-prober-1.35.ebuild,
   +files/os-prober-1.35-multilib.patch, +metadata.xml:
   New ebuild. Thanks to Wizzelby <wizzleby@gmail.com> for initial ebuild.
-
